Fix sweeping knockback